<resources>
    <string name="app_name">MyPokemonDex</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="myPokemon">MyPokemon</string>
    <string name="add_to_mypokemon">Add to MyPokemon</string>
    <string name="masukkan_nickname">masukkan Nickname</string>
    <string name="pokemon">Pokemon</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="moves">Moves</string>
    <string name="types">Types</string>
</resources>